--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-    <script src="src/script.js" defer></script>
+    <script defer src="src/script.js"></script>
 </head>
 
 <body>
@@ -19,9 +19,9 @@
     </header>
     <div class="user-nav">
         <p class="logged-in-username">#username</p>
-        <a href="" class="user-nav-icon" id="login"><i class=" fas fa-user"></i></a>
-        <a href="" class="user-nav-icon" id="favorite"><i class="fas fa-heart"></i></a>
-        <a href="" class="user-nav-icon" id="cart"><i class="fas fa-shopping-cart"></i></a>
+        <a class="user-nav-icon" id="login-icon"><i class="fas fa-user"></i></a>
+        <a class="user-nav-icon" id="favorite-icon"><i class="fas fa-heart"></i></a>
+        <a class="user-nav-icon" id="cart-icon"><i class="fas fa-shopping-cart"></i></a>
     </div>
     <!-- TODO:hidden -->
     <div class="bg-popup hidden"></div>
