--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
         <a class="user-nav-icon" id="cart-icon"><i class="fas fa-shopping-cart"></i></a>
     </div>
     <!-- TODO:hidden -->
-    <div class="bg-popup hidden"></div>
+    <div class="bg-popup hidden" ></div>
     <div class="login-page hidden">
         <h2 class="login-title">Logga in</h2>
         <div class="input-wrapper">
@@ -35,6 +35,7 @@
             <label for="user-password">Lösenord:</label>
             <input id="user-password" type="password" placeholder="Ditt lösenord">
         </div>
+        <a class="user-register">Registrera</a>
         <button class="login-user-btn">Logga in</button>
     </div>
     <div class="register-page hidden">
