:muscle: :lipstick: added cart

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,38 @@
         </div>
         <button class="register-user-btn">Logga in</button>
     </div>
+    <div class="cart">
+        <h2 class="cart-title">Varukorg</h2>
+        <div class="cart-container">
+            <div class="cart-product">
+                <img class="cart-product-img" src="assets/random-product.jpeg" alt="product info" height="100px">
+                <div class="cart-counter">
+                    <button class="cart-decrease-btn">-</button>
+                    <p><span class="cart-product-count"></span> st</p>
+                    <button class="cart-increase-btn">+</button>
+                </div>
+                <div class="cart-product-info">
+                    <p class="cart-product-name">Produktnamn</p>
+                    <p class="">Summa: <span class="cart-product-sum"></span> kr</p>
+                </div>
+            </div>
+            <div class="cart-product">
+                <img class="cart-product-img" src="assets/random-product.jpeg" alt="product info" height="100px">
+                <div class="cart-counter">
+                    <button class="cart-decrease-btn">-</button>
+                    <p><span class="cart-product-count"></span> st</p>
+                    <button class="cart-increase-btn">+</button>
+                </div>
+                <div class="cart-product-info">
+                    <p class="cart-product-name">Produktnamn</p>
+                    <p class="">Summa: <span class="cart-product-sum"></span> kr</p>
+                </div>
+            </div>
+        </div>
+        <p>Totalt: <span class="cart-total-sum"></span> kr</p> 
+        <button>Abryt</button>
+        <button>Skicka</button>
+    </div>
 
     <section class="categories-container">
         <a href="" class="category">Överdelar</a>
