--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,7 @@
         </div>
         <button class="register-user-btn">Logga in</button>
     </div>
-    <div class="cart">
+    <div class="cart hidden">
         <h2 class="cart-title">Varukorg</h2>
         <div class="cart-container">
             <div class="cart-product">
@@ -83,8 +83,8 @@
             </div>
         </div>
         <p>Totalt: <span class="cart-total-sum"></span> kr</p> 
-        <button>Abryt</button>
-        <button>Skicka</button>
+        <button class="cart-cancel-btn">Abryt</button>
+        <button class="cart-send-btn">Skicka</button>
     </div>
 
     <section class="categories-container">
