--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-    <script defer src="src/script.ts"></script>
+    <script defer src="src/script.ts" type="module"></script>
 </head>
 
 <body>
@@ -95,57 +95,6 @@
         <a href="" class="category">Övrigt</a>
     </section>
     <section class="products">
-        <article class="product">
-            <img class="product-img" src="assets/random-product.jpeg" alt="product info">
-            <div class="product-counter-container">
-                <button>-</button>
-                <p><span class="product-count"></span> st</p>
-                <button>+</button>
-            </div>
-            <div class="product-info">
-                <p class="product-name">Produktnamn</p>
-                <p class="product-price">Pris</p>
-            </div>
-        </article>
-
-        <article class="product">
-            <img class="product-img" src="assets/random-product.jpeg" alt="product info">
-            <div class="product-counter-container">
-                <button>-</button>
-                <p><span class="product-count"></span> st</p>
-                <button>+</button>
-            </div>
-            <div class="product-info">
-                <p class="product-name">Produktnamn</p>
-                <p class="product-price">Pris</p>
-            </div>
-        </article>
-
-        <article class="product">
-            <img class="product-img" src="assets/random-product.jpeg" alt="product info">
-            <div class="product-counter-container">
-                <button>-</button>
-                <p><span class="product-count"></span> st</p>
-                <button>+</button>
-            </div>
-            <div class="product-info">
-                <p class="product-name">Produktnamn</p>
-                <p class="product-price">Pris</p>
-            </div>
-        </article>
-
-        <article class="product">
-            <img class="product-img" src="assets/random-product.jpeg" alt="product info">
-            <div class="product-counter-container">
-                <button>-</button>
-                <p><span class="product-count"></span> st</p>
-                <button>+</button>
-            </div>
-            <div class="product-info">
-                <p class="product-name">Produktnamn</p>
-                <p class="product-price">Pris</p>
-            </div>
-        </article>
     </section>
 </body>
 
