added login user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
         <h1 class="header-title">Clothes and Stuff</h1>
     </header>
     <div class="user-nav">
-        <p class="logged-in-username">#username</p>
+        <p class="logged-in-username"></p>
         <a class="user-nav-icon" id="login-icon"><i class="fas fa-user"></i></a>
         <a class="user-nav-icon" id="favorite-icon"><i class="fas fa-heart"></i></a>
         <a class="user-nav-icon" id="cart-icon"><i class="fas fa-shopping-cart"></i></a>
