--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,8 +56,7 @@
     </div>
     <div class="cart hidden">
         <h2 class="cart-title">Varukorg</h2>
-        <div class="cart-container">
-        </div>
+        <div class="cart-container"></div>
         <p>Totalt: <span class="cart-total-sum"></span> kr</p> 
         <button class="cart-cancel-btn">Abryt</button>
         <button class="cart-send-btn">Skicka</button>
