--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clothes and Stuff</title>
+    <title>Stuff & Stuff</title>
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <h1 class="header-title">Clothes and Stuff</h1>
+        <h1 class="header-title">Stuff & Stuff</h1>
     </header>
     <div class="user-nav">
         <p class="logged-in-username"></p>
@@ -23,7 +23,6 @@
         <a class="user-nav-icon" id="favorite-icon"><i class="fas fa-heart"></i></a>
         <a class="user-nav-icon" id="cart-icon"><i class="fas fa-shopping-cart"></i></a>
     </div>
-    <!-- TODO:hidden -->
     <div class="bg-popup hidden" ></div>
     <div class="login-page hidden">
         <h2 class="login-title">Logga in</h2>
@@ -68,7 +67,6 @@
         </div>
         <button class="exit-order-btn">Tillbaka</button>
     </div>
-
     <section class="categories-container">
         <a href="" class="category">Överdelar</a>
         <a href="" class="category">Nederdelar</a>
