--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,11 +68,11 @@
         <button class="exit-order-btn">Tillbaka</button>
     </div>
     <section class="categories-container">
-        <a href="" class="category">Överdelar</a>
-        <a href="" class="category">Nederdelar</a>
-        <a href="" class="category">Skor</a>
-        <a href="" class="category">Accessoarer</a>
-        <a href="" class="category">Övrigt</a>
+        <a class="category">Överdelar</a>
+        <a class="category">Nederdelar</a>
+        <a class="category">Skor</a>
+        <a class="category">Accessoarer</a>
+        <a class="category">Övrigt</a>
     </section>
     <section class="products">
     </section>
