--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,11 +68,11 @@
         <button class="exit-order-btn">Tillbaka</button>
     </div>
     <section class="categories-container">
-        <a class="category">Överdelar</a>
-        <a class="category">Nederdelar</a>
-        <a class="category">Skor</a>
-        <a class="category">Accessoarer</a>
-        <a class="category">Övrigt</a>
+        <button id="tops-btn" class="category">Överdelar</button>
+        <button id="bottoms-btn" class="category">Nederdelar</button>
+        <button id="shoes-btn" class="category">Skor</button>
+        <button id="accessories-btn" class="category">Accessoarer</button>
+        <button id="other-btn" class="category">Övrigt</button>
     </section>
     <section class="products">
     </section>
