get categories from db and print them

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
         <h2 class="cart-title">Varukorg</h2>
         <div class="cart-container"></div>
         <p>Totalt: <span class="cart-total-sum"></span> kr</p> 
-        <button class="cart-cancel-btn">Abryt</button>
+        <button class="cart-cancel-btn">Avbryt</button>
         <button class="cart-send-btn">Skicka</button>
     </div>
     <div class="order hidden">
@@ -68,11 +68,11 @@
         <button class="exit-order-btn">Tillbaka</button>
     </div>
     <section class="categories-container">
-        <button id="tops-btn" class="category">Överdelar</button>
+        <!-- <button id="tops-btn" class="category">Överdelar</button>
         <button id="bottoms-btn" class="category">Nederdelar</button>
         <button id="shoes-btn" class="category">Skor</button>
         <button id="accessories-btn" class="category">Accessoarer</button>
-        <button id="other-btn" class="category">Övrigt</button>
+        <button id="other-btn" class="category">Övrigt</button> -->
     </section>
     <section class="products">
     </section>
