--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,13 +67,7 @@
         </div>
         <button class="exit-order-btn">Tillbaka</button>
     </div>
-    <section class="categories-container">
-        <!-- <button id="tops-btn" class="category">Överdelar</button>
-        <button id="bottoms-btn" class="category">Nederdelar</button>
-        <button id="shoes-btn" class="category">Skor</button>
-        <button id="accessories-btn" class="category">Accessoarer</button>
-        <button id="other-btn" class="category">Övrigt</button> -->
-    </section>
+    <section class="categories-container"></section>
     <section class="products">
     </section>
 </body>
