--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,14 +62,11 @@
     </div>
     <div class="order hidden">
         <h2>Order:</h2>
-        <div class="order-container">
-
-        </div>
+        <div class="order-container"></div>
         <button class="exit-order-btn">Tillbaka</button>
     </div>
     <section class="categories-container"></section>
-    <section class="products">
-    </section>
+    <section class="products"></section>
 </body>
 
 </html>
